# indeed-db

./: README.md  pyproject.toml
.github/workflows/: publish-python.yml  verify-python.yml
src/indeed_db/: __init__.py
src/indeed_db/module/mongo/: main.py
src/indeed_db/module/neo4j/: main.py
